--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,13 @@
-h1
-  color: red
-  display: flex
-  transition: all .4s
+@import "vars"
+
+@import "section/header"
+@import "section/start"
+@import "section/service"
+@import "section/creativity"
+@import "section/work"
+@import "section/slaider"
+@import "section/team"
+@import "section/map"
+@import "section/footer"
+
+ 
