--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,7 +1,7 @@
-@import "vars"
+@import "extra"
 
 @import "section/header"
-@import "section/start"
+@import "section/intro"
 @import "section/service"
 @import "section/creativity"
 @import "section/work"
@@ -10,4 +10,4 @@
 @import "section/map"
 @import "section/footer"
 
- 
+@import "media"
