--- a/app/sass/section/_map.sass
+++ b/app/sass/section/_map.sass
@@ -3,10 +3,5 @@
   background-image: url("../img/mapbg.png")
   background-size: cover
   background-position: center
-  &__cont
-    @extend %container
-    position: relative
-  &__img
-    position: absolute
-    top: 246px
-    left: 50%
+  iframe
+    width: 100%
