--- a/app/sass/_extra.sass
+++ b/app/sass/_extra.sass
@@ -15,13 +15,15 @@ h1, h2, p
   font-weight: bold
   color: #0149a1
   padding-bottom: 15px
+  @media (max-width: 766px)
+    line-height: 1
 %subtitle
   font-size: 36px
   font-weight: 300
   line-height: 1.33
   color: #5d6981
 %titleItem
-  padding: 50px 0px 26px 0px
+  padding: 46px 0px 26px 0px
   font-size: 30px
   font-weight: bold
   line-height: 1.6
@@ -41,3 +43,4 @@ h1, h2, p
   font-weight: bold
   line-height: 2.67
   color: white
+  cursor: pointer 
