--- a/app/sass/section/_creativity.sass
+++ b/app/sass/section/_creativity.sass
@@ -1,12 +1,15 @@
-.creativity
+.ask
+  position: relative
   height: 610px
   background-image: url("../img/bgcreativity.png")
   background-position: center
   background-size: cover
-  &__cont
-    @extend %container
+  .container
+    display: flex
+    justify-content: center
   &__btn
     @extend %btn
-    margin: 355px auto
-    box-shadow: 0 0 60px 50px white
+    position: absolute
+    top: 60%
+    box-shadow: 0 0 80px 60px white
     background-color: #0149a1
