--- a/app/sass/section/_header.sass
+++ b/app/sass/section/_header.sass
@@ -1,37 +1,96 @@
 .header
-  border-bottom: 1px solid #e4e6ea
-  &__cont
-    @extend %container
+  border-bottom: 2px solid #e4e6ea
+  .container
     height: 100px
     display: flex
+    flex-wrap: nowrap
     justify-content: space-between
     align-items: center
+    @media (max-width: 990px)
+      text-align: center
   &__logo
     font-size: 36px
-    font-weight: 300
-    line-height: 0.67
     color: #0149a1
-  .nav
-    width: 750px
-    display: flex
-    justify-content: space-between
-    align-items: center
-    &__btn
-      width: 100px
-      height: 45px
-      border: solid 1px #9fabba
-      border-radius: 20px
-      background-color: white
-    &__link
-      font-size: 20px
-      text-decoration: none
-      line-height: 1.2
-      color: #5d6991
-    &__iconCont
+    span
+      font-weight: bold
+.nav
+  align-items: center
+  list-style-type: none
+  display: flex
+  flex-wrap: nowrap
+  justify-content: space-between
+  &__link
+    font-size: 20px
+    line-height: 1.2
+    color: #5d6981
+    padding: 0px 22px
+    &:hover
+      height: 46px
+      cursor: pointer
+      text-align: center
       display: flex
-      justify-content: center
-    &__icon
+      align-items: center
+      border-radius: 22px
+      padding: 0px 20px
+      border: 2px solid #9fabba
+  &__wrap
+    display: flex
+  &__social
+    cursor: pointer
+    transition: 0.3s
+    &:first-child
+      padding: 0px 15px 0px 18px
+    &:hover
+      transform: rotate(360deg)
+#mob
+  position: absolute
+  visibility: hidden
+  width: 40px
+  height: 40px
+.graidient
+  background-image: linear-gradient(to top, #edeff1 1%, #ffffff 24%, #e2e4e8 31%, #ffffff)
+  @media (max-width: 994px)
+      background-image: linear-gradient(to top, #edeff1 1%, #ffffff 39%, #e2e4e8 50%, #ffffff)
+  @media (max-width: 556px)
+      background-image: linear-gradient(to top, #edeff1 -30%, #ffffff 50%, #e2e4e8 60%, #ffffff 90%)
+
+@media (max-width: 900px)
+
+  #mob
+    position: static
+    visibility: visible
+  .header
+    padding: 0px 20px
+    left: 0
+    position: fixed
+    height: 15vh
+    width: 100%
+    background-color: white
+    z-index: 100
+    .container
+      height: 15vh
+  .nav
+    left: 0
+    display: none
+    position: fixed
+    top: 15vh
+    width: 100%
+    &__link
+      height: auto
+      background-color: white
       width: 100%
-      height: 100%
-      &:last-child
-        padding-left: 15px
+      font-size: 25px
+      padding: 10px 0px
+      border: 1px solid #e4e6ea
+      &:nth-child(5)
+        border-bottom: 2px solid #e4e6ea
+      &:hover
+        height: auto
+        cursor: pointer
+        text-align: center
+        border: 1px solid #e4e6ea
+        display: inline-block
+        border-radius: 0
+        padding: 10px 0px
+  .nav__social
+    display: none
