--- a/app/sass/section/_slaider.sass
+++ b/app/sass/section/_slaider.sass
@@ -1,42 +1,38 @@
-.slaider
-  @extend %container
-  position: relative
-  &__cont
-    width: 600px
-    margin: 0 auto
-    overflow: hidden
-    padding: 105px 0
-  &__items
-    display: flex
-    flex-wrap: wrap
-    height: 100%
-    position: relative
+.clients
+  .container
+    padding-top: 100px
+    margin-bottom: 75px
   &__item
-    width: 600px
+    position: relative
+    text-align: center
+    @media (max-width: 400px)
+      padding: 0px 10px
   &__text
-    padding: 50px 0px 15px 0px
-    font-style: italic
+    margin: 0 auto
+    max-width: 570px
     font-size: 24px
-    font-weight: 300
+    font-style: italic
     line-height: 1.25
     color: #7c8ca0
-  &__copy
+    padding: 50px 0px 45px 0px
+  &__text-bot
     font-size: 18px
-    line-height: 1.67
     color: #7c8ca0
-    font-weight: 300
-  &__btn
+    padding-bottom: 100px
+  &__img
+    width: 135px
+    height: 135px
+    margin: 0 auto
+  a
+    text-decoration: underline
+
+.slick-prev:before, .slick-next:before
     position: absolute
-    width: 75px
-    height: 75px
-    border-radius: 50%
-    background-color: white
-    border: 2px solid #e3e7eb
-    top: 50%
-    &:first-child
-      right: 0
-    &:last-child
-      left: 0
-  &__icon
-    height: 50px
-    width: 35px
+    font-size: 50px
+    color: #849EBE
+    @media (max-width: 900px)
+      display: none
+// .slick-arrow, .slick-prev, .slick-next
+//   @media (max-width: 900px)
+//     position: absolute
+//     visibility: hidden
