--- a/app/sass/section/_team.sass
+++ b/app/sass/section/_team.sass
@@ -1,25 +1,39 @@
 .team
   background-color: #edeff1
-  &__cont
-    @extend %container
-    padding: 138px 0px 125px 0px
+  text-align: center
+  .container
+    padding: 140px 0px 125px 0px
+    @media (max-width: 994px)
+      padding: 140px 20px 125px 20px
+    @media (max-width: 504px)
+      padding: 140px 40px 125px 40px
   &__title
     @extend %title
-  &__subtitle
+  &__subTitle
     @extend %subtitle
+    color: #7c8ca0
     padding-bottom: 100px
   &__items
     display: flex
     justify-content: space-between
     align-items: center
     padding-bottom: 85px
+    @media (max-width: 994px)
+      flex-wrap: wrap
+    @media (max-width: 765px)
+      justify-content: center
   &__item
     display: flex
     flex-direction: column
     align-items: center
-  &__itemTitle
+    @media (max-width: 994px)
+      padding: 30px 0px
+      max-width: 340px
+  &__item-title
     @extend %titleItem
-  &__itemText
+    color: #5d6981
+  &__item-text
     @extend %subtitleItem
+    color: #7c8ca0
   &__btn
     @extend %btn
